--- a/RTLib/CMakeLists.txt
+++ b/RTLib/CMakeLists.txt
@@ -16,14 +16,14 @@ set(RTLIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 if(WIN32)
     string(REPLACE "/" "\\\\" RTLIB_OPTIX_INCLUDE_DIR ${RTLIB_OPTIX_INCLUDE_DIR})
     string(REPLACE "/" "\\\\" RTLIB_CUDA_INCLUDE_DIRS ${RTLIB_CUDA_INCLUDE_DIRS})
-    string(REPLACE "/" "\\\\" RTLIB_INCLUDE_DIR ${RTLIB_INCLUDE_DIR})
+    string(REPLACE "/" "\\\\" RTLIB_INCLUDE_DIR       ${RTLIB_INCLUDE_DIR})
 endif()
 set(CUDA_NVRTC_FLAGS -arch compute_60 -use_fast_math -lineinfo -default-device -rdc true -D__x86_64 --std=c++11)
 foreach(flag ${CUDA_NVRTC_FLAGS})
   set(RTLIB_NVRTC_OPTIONS "${RTLIB_NVRTC_OPTIONS} \\\n  \"${flag}\",")
 endforeach()
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/Config.h.in ${RTLIB_INCLUDE_DIR}/RTLib/Config.h @ONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/Config.h.in ${CMAKE_CURRENT_BINARY_DIR}/RTLib/Config.h @ONLY)
 ##include directories
-target_include_directories(RTLib PUBLIC ${RTLIB_INCLUDE_DIR})
+target_include_directories(RTLib PUBLIC ${RTLIB_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 ##link libraries
-target_link_libraries(RTLib PUBLIC CUDA::cudart CUDA::nvrtc glad stb glfw tinyobjloader OptiX::OptiX)
+target_link_libraries(RTLib PUBLIC CUDA::cudart CUDA::nvrtc glad glm::glm stb glfw tinyobjloader OptiX::OptiX)
