--- a/Test/Test9/Test9Config.h.in
+++ b/Test/Test9/Test9Config.h.in
@@ -1,4 +1,5 @@
 #ifndef TEST_TEST9_CONFIG_H
 #define TEST_TEST9_CONFIG_H
 #cmakedefine TEST_TEST9_CUDA_PATH "@TEST_TEST9_CUDA_PATH@"
+#cmakedefine TEST_TEST9_DATA_PATH "@TEST_TEST9_DATA_PATH@"
 #endif
