--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -12,4 +12,6 @@ add_subdirectory(Test6)
 ## optix test3(first Instance(2 Instance 1 GAS))
 add_subdirectory(Test7)
 add_subdirectory(Test8)
+## optix test5(first model(sponza))
 add_subdirectory(Test9)
+add_subdirectory(Test10)
