--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -14,4 +14,7 @@ add_subdirectory(Test7)
 add_subdirectory(Test8)
 ## optix test5(first model(sponza))
 add_subdirectory(Test9)
+## optix test5(first model with Tex(sponza))
 add_subdirectory(Test10)
+## optix test6(first model(cornel box))
+add_subdirectory(Test11)
