--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -18,3 +18,5 @@ add_subdirectory(Test9)
 add_subdirectory(Test10)
 ## optix test6(first model(cornel box))
 add_subdirectory(Test11)
+## optix test7(first path tracing)
+add_subdirectory(Test12)
