--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -20,3 +20,4 @@ add_subdirectory(Test10)
 add_subdirectory(Test11)
 ## optix test7(first path tracing)
 add_subdirectory(Test12)
+add_subdirectory(Test13)
