--- a/RTLib/CMakeLists.txt
+++ b/RTLib/CMakeLists.txt
@@ -18,7 +18,7 @@ if(WIN32)
     string(REPLACE "/" "\\\\" RTLIB_CUDA_INCLUDE_DIRS ${RTLIB_CUDA_INCLUDE_DIRS})
     string(REPLACE "/" "\\\\" RTLIB_INCLUDE_DIR       ${RTLIB_INCLUDE_DIR})
 endif()
-set(CUDA_NVRTC_FLAGS -arch compute_60 -use_fast_math -lineinfo -default-device -rdc true -D__x86_64 --std=c++11)
+set(CUDA_NVRTC_FLAGS -arch compute_75 -use_fast_math -lineinfo -default-device -rdc true -D__x86_64 --std=c++11)
 foreach(flag ${CUDA_NVRTC_FLAGS})
   set(RTLIB_NVRTC_OPTIONS "${RTLIB_NVRTC_OPTIONS} \\\n  \"${flag}\",")
 endforeach()
@@ -27,3 +27,23 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/Config.h.in ${CMAKE_CUR
 target_include_directories(RTLib PUBLIC ${RTLIB_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 ##link libraries
 target_link_libraries(RTLib PUBLIC CUDA::cudart CUDA::nvrtc glad glm::glm stb glfw tinyobjloader OptiX::OptiX)
+
+set(RTLIB_OPTIX_INCLUDE_DIR ${RTLIB_OPTIX_INCLUDE_DIR} PARENT_SCOPE)
+set(RTLIB_INCLUDE_DIR       ${RTLIB_INCLUDE_DIR}       PARENT_SCOPE)
+
+function(rtlib_compile_ptx target source include_dirs)
+  set(rtlib_compile_options "-ptx")
+  set(RTLIB_OPTIX_INCLUDE_DIR ${RTLIB_OPTIX_INCLUDE_DIR} PARENT_SCOPE)
+  set(RTLIB_INCLUDE_DIR       ${RTLIB_INCLUDE_DIR}       PARENT_SCOPE)
+  set(RTLIB_NVCC_OPTIONS -arch compute_75 --use_fast_math -lineinfo -rdc true --std c++17)
+  set(rtlib_compile_options "${rtlib_compile_options} -I\"${RTLIB_OPTIX_INCLUDE_DIR}\"")
+  set(rtlib_compile_options "${rtlib_compile_options} -I\"${RTLIB_INCLUDE_DIR}\"")
+  foreach(include_dir ${include_dirs})
+    set(rtlib_compile_options "${rtlib_compile_options} -I\"${include_dir}\"")
+  endforeach(include_dir )
+  foreach(option ${RTLIB_NVCC_OPTIONS})
+    set(rtlib_compile_options "${rtlib_compile_options} ${option}")
+  endforeach(option )
+  get_filename_component(source_name_we ${source} NAME_WE)
+  add_custom_command(TARGET ${target} POST_BUILD COMMAND ${CUDAToolkit_NVCC_EXECUTABLE} ${source} ${rtlib_compile_options} -o ${CMAKE_CURRENT_BINARY_DIR}/cuda/${source_name_we}.ptx)
+endfunction()
