--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -21,3 +21,5 @@ add_subdirectory(Test11)
 ## optix test7(first path tracing)
 add_subdirectory(Test12)
 add_subdirectory(Test13)
+## optix test9(first free Camera)
+add_subdirectory(Test14)
