--- a/RTLib/CMakeLists.txt
+++ b/RTLib/CMakeLists.txt
@@ -2,13 +2,10 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 find_package(OptiX 7.0.0 REQUIRED)
 find_package(CUDAToolkit REQUIRED)
 add_subdirectory(thirdparty)
-add_library(RTLib STATIC 
-${CMAKE_CURRENT_SOURCE_DIR}/src/Core.cpp 
-${CMAKE_CURRENT_SOURCE_DIR}/src/Exceptions.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/src/Camera.cpp)
 ##config setup
 set(RTLIB_OPTIX_INCLUDE_DIR ${OptiX_INCLUDE_DIR})
 set(RTLIB_CUDA_INCLUDE_DIRS )
+set(RTLIB_CUDA_SM_VERSION 75)
 foreach(dir ${CUDAToolkit_INCLUDE_DIRS})
     set(RTLIB_CUDA_INCLUDE_DIRS "${RTLIB_CUDA_INCLUDE_DIRS} \\\n  \"${dir}\",")
 endforeach()
@@ -18,11 +15,18 @@ if(WIN32)
     string(REPLACE "/" "\\\\" RTLIB_CUDA_INCLUDE_DIRS ${RTLIB_CUDA_INCLUDE_DIRS})
     string(REPLACE "/" "\\\\" RTLIB_INCLUDE_DIR       ${RTLIB_INCLUDE_DIR})
 endif()
-set(CUDA_NVRTC_FLAGS -arch compute_75 -use_fast_math -lineinfo -default-device -rdc true -D__x86_64 --std=c++11)
-foreach(flag ${CUDA_NVRTC_FLAGS})
-  set(RTLIB_NVRTC_OPTIONS "${RTLIB_NVRTC_OPTIONS} \\\n  \"${flag}\",")
+set(CUDA_NVRTC_OPTIONS -arch compute_${RTLIB_CUDA_SM_VERSION} -use_fast_math -lineinfo -default-device -rdc true -D__x86_64 --std=c++11)
+foreach(option ${CUDA_NVRTC_OPTIONS})
+  set(RTLIB_NVRTC_OPTIONS "${RTLIB_NVRTC_OPTIONS} \\\n  \"${option}\",")
 endforeach()
+set(RTLIB_NVCC_OPTIONS -arch compute_${RTLIB_CUDA_SM_VERSION} -use_fast_math -lineinfo -rdc true -m64 --std c++17)
+##configure
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/Config.h.in ${CMAKE_CURRENT_BINARY_DIR}/RTLib/Config.h @ONLY)
+##add library
+add_library(RTLib STATIC 
+${CMAKE_CURRENT_SOURCE_DIR}/src/Core.cpp 
+${CMAKE_CURRENT_SOURCE_DIR}/src/Exceptions.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/Camera.cpp)
 ##include directories
 target_include_directories(RTLib PUBLIC ${RTLIB_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 ##link libraries
@@ -30,12 +34,12 @@ target_link_libraries(RTLib PUBLIC CUDA::cudart CUDA::nvrtc glad glm::glm stb gl
 
 set(RTLIB_OPTIX_INCLUDE_DIR ${RTLIB_OPTIX_INCLUDE_DIR} PARENT_SCOPE)
 set(RTLIB_INCLUDE_DIR       ${RTLIB_INCLUDE_DIR}       PARENT_SCOPE)
-
+set(RTLIB_NVCC_OPTIONS      ${RTLIB_NVCC_OPTIONS}      PARENT_SCOPE)
 function(rtlib_compile_ptx target source include_dirs)
   set(rtlib_compile_options "-ptx")
   set(RTLIB_OPTIX_INCLUDE_DIR ${RTLIB_OPTIX_INCLUDE_DIR} PARENT_SCOPE)
   set(RTLIB_INCLUDE_DIR       ${RTLIB_INCLUDE_DIR}       PARENT_SCOPE)
-  set(RTLIB_NVCC_OPTIONS -arch compute_75 --use_fast_math -lineinfo -rdc true --std c++17)
+  set(RTLIB_NVCC_OPTIONS      ${RTLIB_NVCC_OPTIONS}      PARENT_SCOPE)
   set(rtlib_compile_options "${rtlib_compile_options} -I\"${RTLIB_OPTIX_INCLUDE_DIR}\"")
   set(rtlib_compile_options "${rtlib_compile_options} -I\"${RTLIB_INCLUDE_DIR}\"")
   foreach(include_dir ${include_dirs})
