--- a/Test/Test14/CMakeLists.txt
+++ b/Test/Test14/CMakeLists.txt
@@ -8,8 +8,8 @@ configure_file(
     ${CMAKE_CURRENT_BINARY_DIR}/Test14Config.h 
 )
 add_executable(Test14 main.cpp ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h  ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu)
-add_custom_command(TARGET Test14 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h  ${CMAKE_CURRENT_BINARY_DIR}/cuda/RayTrace.h )
-add_custom_command(TARGET Test14 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu ${CMAKE_CURRENT_BINARY_DIR}/cuda/RayTrace.cu)
+add_custom_command(TARGET Test14 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h  ${TEST_TEST14_CUDA_PATH}/RayTrace.h )
+add_custom_command(TARGET Test14 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu ${TEST_TEST14_CUDA_PATH}/RayTrace.cu)
 rtlib_compile_ptx(Test14 ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h)
 target_include_directories(Test14 PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(Test14 PUBLIC RTLib)
