--- a/Test/Test13/CMakeLists.txt
+++ b/Test/Test13/CMakeLists.txt
@@ -10,5 +10,6 @@ configure_file(
 add_executable(Test13 main.cpp ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h  ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu)
 add_custom_command(TARGET Test13 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h  ${CMAKE_CURRENT_BINARY_DIR}/cuda/RayTrace.h )
 add_custom_command(TARGET Test13 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu ${CMAKE_CURRENT_BINARY_DIR}/cuda/RayTrace.cu)
+rtlib_compile_ptx(Test13 ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h)
 target_include_directories(Test13 PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(Test13 PUBLIC RTLib)
