--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(Test12)
 add_subdirectory(Test13)
 ## optix test9(first free Camera)
 add_subdirectory(Test14)
+add_subdirectory(Test15)
