--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -24,3 +24,5 @@ add_subdirectory(Test13)
 ## optix test9(first free Camera)
 add_subdirectory(Test14)
 add_subdirectory(Test15)
+## add imgui 
+add_subdirectory(Test16)
