--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -26,4 +26,5 @@ add_subdirectory(Test14)
 add_subdirectory(Test15)
 ## add imgui 
 add_subdirectory(Test16)
+## fix light
 add_subdirectory(Test17)
