--- a/Test/Test16/Test16Config.h.in
+++ b/Test/Test16/Test16Config.h.in
@@ -1,4 +1,5 @@
 #ifndef TEST_TEST16_CONFIG_H
 #define TEST_TEST16_CONFIG_H
+#cmakedefine TEST_TEST16_CUDA_PATH "@TEST_TEST16_CUDA_PATH@"
 #cmakedefine TEST_TEST16_DATA_PATH "@TEST_TEST16_DATA_PATH@"
 #endif
