--- a/Test/Test19/CMakeLists.txt
+++ b/Test/Test19/CMakeLists.txt
@@ -4,6 +4,7 @@ configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/Test19Config.h.in 
     ${CMAKE_CURRENT_BINARY_DIR}/Test19Config.h 
 )
+
 add_executable(Test19
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTApplication.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTPipeline.h
@@ -11,7 +12,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include/RTSubPass.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTRecordBuffer.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTTracer.h
 ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/PathTracer.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/SceneBuilder.h
 
 ${CMAKE_CURRENT_SOURCE_DIR}/src/RTApplication.cpp
@@ -19,9 +19,8 @@ ${CMAKE_CURRENT_SOURCE_DIR}/src/RTPipeline.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/RTTracer.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu
-${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayDebug.cu
+${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayDebug.cu)
 
-${CMAKE_CURRENT_SOURCE_DIR}/src/PathTracer.cpp)
 add_custom_command(TARGET Test19 PRE_BUILD  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h  ${TEST_TEST19_CUDA_PATH}/RayTrace.h )
 add_custom_command(TARGET Test19 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu ${TEST_TEST19_CUDA_PATH}/RayTrace.cu)
 add_custom_command(TARGET Test19 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayDebug.cu ${TEST_TEST19_CUDA_PATH}/RayDebug.cu)
