--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -36,3 +36,4 @@ add_subdirectory(Test19)
 add_subdirectory(Test20)
 add_subdirectory(Test21)
 add_subdirectory(TestPathGuiding)
+add_subdirectory(TestPathGuiding2)
