--- a/Test/TestPathGuiding2/CMakeLists.txt
+++ b/Test/TestPathGuiding2/CMakeLists.txt
@@ -6,7 +6,9 @@ configure_file(
     ${CMAKE_CURRENT_BINARY_DIR}/TestPGConfig.h
 )
 
-set(PATH_GUIDING_MAX_DEPTH 1024)
+set(PATH_GUIDING_MAX_DEPTH       1024)
+set(PATH_GUIDING_STREE_MAX_DEPTH 32)
+set(PATH_GUIDING_DTREE_MAX_DEPTH 16)
 set(PATH_GUIDING_LI_COSINE 1)
 
 configure_file(
