--- a/Test/TestPathGuiding2/cuda/PathGuidingConfig.h.in
+++ b/Test/TestPathGuiding2/cuda/PathGuidingConfig.h.in
@@ -1,5 +1,7 @@
 #ifndef PATH_GUIDING_CONFIG_H
 #define PATH_GUIDING_CONFIG_H
-#define PATH_GUIDING_MAX_DEPTH @PATH_GUIDING_MAX_DEPTH@
-#define PATH_GUIDING_LI_COSINE @PATH_GUIDING_LI_COSINE@
+#define PATH_GUIDING_MAX_DEPTH       @PATH_GUIDING_MAX_DEPTH@
+#define PATH_GUIDING_STREE_MAX_DEPTH @PATH_GUIDING_STREE_MAX_DEPTH@
+#define PATH_GUIDING_DTREE_MAX_DEPTH @PATH_GUIDING_DTREE_MAX_DEPTH@
+#define PATH_GUIDING_LI_COSINE       @PATH_GUIDING_LI_COSINE@
 #endif
