--- a/Test/TestPathGuiding3/CMakeLists.txt
+++ b/Test/TestPathGuiding3/CMakeLists.txt
@@ -30,28 +30,27 @@ add_executable(TestPathGuiding3
     ${CMAKE_CURRENT_SOURCE_DIR}/include/RTPathGuidingUtils.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/RTApplication.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/RTPipeline.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/include/RTSubPass.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/include/RTRecordBuffer.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/RTFrameBuffer.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/RTTracer.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/include/SceneBuilder.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/RTAssets.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/TestPG3Application.h
     ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h
     ${CMAKE_CURRENT_SOURCE_DIR}/cuda/PathGuiding.h
     ${CMAKE_CURRENT_BINARY_DIR}/TestPGConfig.h
 
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/RTApplication.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/RTPipeline.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/RTTracer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayGuiding.cu
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/TestPG3Application.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/RTAssets.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu
     ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayDebug.cu
 )
 
 add_custom_command(TARGET TestPathGuiding3 PRE_BUILD  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h     ${TEST_TEST_PG_CUDA_PATH}/RayTrace.h )
 add_custom_command(TARGET TestPathGuiding3 PRE_BUILD  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/PathGuiding.h  ${TEST_TEST_PG_CUDA_PATH}/PathGuiding.h )
 add_custom_command(TARGET TestPathGuiding3 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayDebug.cu    ${TEST_TEST_PG_CUDA_PATH}/RayDebug.cu)
-add_custom_command(TARGET TestPathGuiding3 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayGuiding.cu  ${TEST_TEST_PG_CUDA_PATH}/RayGuiding.cu)
+add_custom_command(TARGET TestPathGuiding3 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu    ${TEST_TEST_PG_CUDA_PATH}/RayTrace.cu)
 
-rtlib_compile_ptx(TestPathGuiding3 ${TEST_TEST_PG_CUDA_PATH}/RayGuiding.cu ${TEST_TEST_PG_CUDA_PATH} )
+rtlib_compile_ptx(TestPathGuiding3 ${TEST_TEST_PG_CUDA_PATH}/RayTrace.cu ${TEST_TEST_PG_CUDA_PATH} )
 rtlib_compile_ptx(TestPathGuiding3 ${TEST_TEST_PG_CUDA_PATH}/RayDebug.cu   ${TEST_TEST_PG_CUDA_PATH} )
 
 target_include_directories(TestPathGuiding3 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR}/cuda)
