--- a/RTLib/CMakeLists.txt
+++ b/RTLib/CMakeLists.txt
@@ -24,6 +24,10 @@ set(RTLIB_NVCC_OPTIONS -arch compute_${RTLIB_CUDA_SM_VERSION} -use_fast_math -li
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/Config.h.in ${CMAKE_CURRENT_BINARY_DIR}/RTLib/Config.h @ONLY)
 ##add library
 add_library(RTLib STATIC 
+
+${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/ext/Mesh.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/ext/TraversalHandle.h
+
 ${CMAKE_CURRENT_SOURCE_DIR}/src/Optix.cpp 
 ${CMAKE_CURRENT_SOURCE_DIR}/src/Exceptions.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/Camera.cpp
