--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "RTLib/thirdparty/tinyxml2"]
 	path = RTLib/thirdparty/tinyxml2
 	url = https://github.com/leethomason/tinyxml2.git
+[submodule "RTLib/thirdparty/boost"]
+	path = RTLib/thirdparty/boost
+	url = https://github.com/boostorg/boost
