--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -39,6 +39,8 @@ add_subdirectory(Test21)
 add_subdirectory(Test22)
 ## Scene Modifier
 add_subdirectory(Test23)
+## Use Standard 
+add_subdirectory(Test24)
 ## practical path guiding(Muller2017)
 add_subdirectory(TestPathGuiding)
 add_subdirectory(TestPathGuiding2)
