--- a/RTLib/CMakeLists.txt
+++ b/RTLib/CMakeLists.txt
@@ -29,14 +29,16 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/GL.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/CUDA.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/CUDA_GL.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/Exceptions.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/Random.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/Math.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/VectorFunction.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/PixelFormat.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/TypeTraits.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/Utils.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/Preprocessors.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/ext/Camera.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/ext/Mesh.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/ext/Math.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/ext/Math/Matrix.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/ext/Math/Random.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/ext/Math/VectorFunction.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/ext/Resources.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/ext/Resources/CUDA.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/RTLib/ext/Resources/GL.h
