--- a/Test/Test24/Test24Config.h.in
+++ b/Test/Test24/Test24Config.h.in
@@ -3,5 +3,6 @@
 #cmakedefine TEST_TEST24_DEF_WIDTH  @TEST_TEST24_DEF_WIDTH@
 #cmakedefine TEST_TEST24_DEF_HEIGHT @TEST_TEST24_DEF_HEIGHT@
 #cmakedefine TEST_TEST24_DEF_TITLE  "@TEST_TEST24_DEF_TITLE@" 
+#cmakedefine TEST_TEST24_GLSL_PATH  "@TEST_TEST24_GLSL_PATH@"
 #cmakedefine TEST_TEST24_DATA_PATH  "@TEST_TEST24_DATA_PATH@"
 #endif
